Moved Architecture Figure to top of page

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -1,9 +1,9 @@
 \section{CrashSimulator Approach Details}
 
-    \begin{figure}[h]
+    \begin{figure*}[t]
         \center{}
         \includegraphics[scale=.5]{Architecture}
-    \end{figure}
+    \end{figure*}
 
     \subsection{Architecture}
 
