New Figure. Moved figure to top of page

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -2,7 +2,8 @@
 
     \begin{figure*}[t]
         \center{}
-        \includegraphics[scale=.5]{Architecture}
+        \fbox{\includegraphics[scale=.5]{Architecture}}
+        \caption{CrashSimulator Architecture}
     \end{figure*}
 
     \subsection{Architecture}
