--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -386,19 +386,23 @@
 % for over three affiliations, or if they all won't fit within the width
 % of the page, use this alternative format:
 %
-\author{\IEEEauthorblockN{Michael Shell\IEEEauthorrefmark{1},
-Homer Simpson\IEEEauthorrefmark{2},
-James Kirk\IEEEauthorrefmark{3},
-Montgomery Scott\IEEEauthorrefmark{3} and
-Eldon Tyrell\IEEEauthorrefmark{4}}
-\IEEEauthorblockA{\IEEEauthorrefmark{1}Polytechnic School of Engineering\\
-New York University,
-New York, New York 11201\\ Email: \textbf{FAKE@EMAIL.com}}
-}
-
-
-
-
+\author{\IEEEauthorblockN{Preston Moore\\
+                          pkm266@nyu.edu\\
+        \IEEEauthorblockA{New York University}\\
+                          \and{}
+                          Phyllis Frankl\\
+                          pfrankl@nyu.edu\\
+        \IEEEauthorblockA{New York University}\\
+                          \and{}
+                          Thomas Wies\\
+                          wies@cs.nyu.edu\\
+        \IEEEauthorblockA{New York University}\\
+                          \and{}
+                          Justin Cappos\\
+                          jcappos@nyu.edu\\
+        \IEEEauthorblockA{New York University}\\
+                         }
+ }
 % use for special paper notices
 %\IEEEspecialpapernotice{(Invited Paper)}
 
