Moved Research Questions to Evaluation section

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -9,7 +9,14 @@
 
 \section{Evaluation}
 
-    In order to measure its efficacy CrashSimulator was implemented in Python. Python was chosen in order to facilitate
+    This work hopes to answer the following questions about CrashSimulator's operation:
+
+        \begin{enumerate}
+            \item{Is CrashSimulator successful in identifying flaws in new and existing applications?}
+            \item{Is CrashSimulator able to generate tests in a performant manner?}
+            \item{Is CrashSimulator able to execute tests in a performant manner?}
+        \end{enumerate}
+        In order to measure its efficacy CrashSimulator was implemented in Python. Python was chosen in order to facilitate
     code reuse from the previous work on CheckAPI and NetCheck. This implementation of CrashSimulator was evaluated on
     the basis of execution performance and number of bugs detected across a set of small test programs and larger, more
     mainstream applications.
