--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -6,6 +6,7 @@
 % TODO: Evaluation: How many of these are useful
 % TODO: Evaluation: Threats to validity
 %     Programming languages of test applications
+% TODO: Do different input trace applications have an effect?
 
 \section{Evaluation}
 
