--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -82,6 +82,8 @@
         identify replicating the application's intended deployment environment or deploying the application and testing
         it live.
 
+        % TODO: Rework from here down
+
     \subsection{Potential Deviations}
 
         \textbf{I would really like to find another term besides anomaly}
