--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -56,25 +56,10 @@
 
     \subsection{A Real World Example}
 
-        \textbf{\emph{This is an example based on a fake tool. It is rough but I can polish it more if this example is
-        on the right track.}}
-
-        TimeSync hosts hardware atomic clocks and leases access to them for clock synchronization purposes to
-        organizations with highly sensitive timing needs. As part of this service they distribute TDaemon, a Linux
-        daemon that make use of a proprietary protocol to synchronize the clock of the machine it is running on with the
-        TimeSync's atomic clocks. TimeSync's expertise was in the setup and maintenance of atomic clocks, not in the
-        construction and maintenance of a highly distributed system. A few years after opening for business, TimeSync's
-        developers decided that the low level communication code for TDaemon needed to be re-written in a newer
-        programming language. Unfortunately, during this rewrite a junior developer failed to handle situations where a
-        \emph{connect} attempt failed. These failed connects caused TDaemon to silently retry its connection without
-        success. All testing of TDaemon utility was performed on TimeSync's local network which had firewall rules in
-        place that allowed development environments to freely access the atomic clocks. When the new version of TDaemon
-        was rolled out, it began silently failing on networks with more restrictive firewall rules. Because TDaemon was
-        written to silently retry the connection until successful, these failures went unnoticed. As a result, at many
-        of TimeSync's locations, system clocks slowly became out of sync resulting in significant damage to experiments
-        and experimental data.
-
-        The above events are a prime situation in which automated testing and CrashSimulator in particular would have
-        saved a great deal of trouble. CrashSimulator is capable of injecting failed \emph{connect} calls into
-        applications during its test runs. As a result, CrashSimulator would produced and reported TDaemon's abnormal
-        behavior in spite of the ideal network conditions present in TDaemon's development environment.
+        During the course of its evaluation, NetCheck was able to identify a bug in Python's socket handling code that
+        compromised portability of Python applications. In short, calling accept on a socket that was created in
+        non-blocking mode would return a new socket in blocking mode on Linux where the same calls would return a
+        non-blocking socket on OS X, Windows, and various flavors of BSD. This caused code that assumed the return
+        socket would always be blocking to work correctly on Linux but fail when an unhandled EWOULDBLOCK error was
+        encountered on the non-blocking socket under OS X, Windows, and BSD. This type of environment-related error is
+        exactly the type of fault that CrashSimulator was designed to identify.
