--- a/CSRelatedWork.tex
+++ b/CSRelatedWork.tex
@@ -54,3 +54,9 @@
             failure are recorded. After all system calls have been evaluated a NetCheck attempts to diagnose the
             source of any errors encountered. It is this diagnosis that CrashSimulator uses when deciding where and how
             to mutate the ``ideal run'' system call trace it is operating on.
+
+        \subsubsection{CheckAPI}
+
+            % TODO: Expand this
+            \textbf{\emph{This needs to be expanded}}
+            CheckAPI attempts to identify
