--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -54,8 +54,10 @@
         non-blocking mode would return a new socket in blocking mode on Linux where the same calls would return a
         non-blocking socket on OS X, Windows, and various flavors of BSD\@. This caused code that assumed the return
         socket would always be blocking to work correctly on Linux but fail when an unhandled EWOULDBLOCK error was
-        encountered on the non-blocking socket under OS X, Windows, and BSD\@. This type of environment-related error is
-        exactly the type of fault that CrashSimulator was designed to identify.
+        encountered on the non-blocking socket under OS X, Windows, and BSD\@. This fault was a source of error for
+        several major Python applications. Many put in place work-arounds without knowing the actual source of the
+        problems.  This type of environment-related error is exactly the type of fault that CrashSimulator was designed
+        to identify.
 
         Because NetCheck was able to identify this anomaly in Python, CrashSimulator is able to produce mutated system
         call traces that can induce it in other applications. NetCheck identifies situations where a socket received
