--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -29,7 +29,7 @@
         CrashSimulator's dependences are installed and configured appropriately. Second, this method provides an
         environment for taking system call traces that is known to be complete tool-wise and compatible with
         CrashSimulator. Finally, and most importantly, this method provides an environment that is known to be
-        compatible with the low level details of CrashSimulator's fault injection techniques.
+        compatible with the details of CrashSimulator's system call replay techniques.
 
         CrashSimulator's source code is available and, while other environments may be untested, it should function
         correctly on any platforms that meet the criteria described above.
